--- a/IU/Components/Pages/ShoppingCart.razor
+++ b/IU/Components/Pages/ShoppingCart.razor
@@ -1,27 +1,33 @@
 ﻿@using BlazorStoreApp.Infraestructura.Dtos
 
-<div class="cart-items">
-    <ul class="cart-list">
+<div class="checkout-container">
+    <div class="order-container">
+        <ul class="checkout-list">
         @if (CartItems.Any())
-        {
-            foreach (var item in CartItems)
             {
-                <li>
-                    @item.Product.Name - @item.Product.SalePrice: €
-                    <button class="btn btn-outline-secondary" @onclick="() => OnUpdateCartItemQuantity(item, item.Count - 1)" disabled="@(item.Count <= 1)">-</button>
-                    <input type="number" value="@item.Count" min="1" readonly>
-                    <button class="btn btn-outline-secondary" @onclick="() => OnUpdateCartItemQuantity(item, item.Count + 1)">+</button>
-                    <button class="btn btn-danger" alt="Eliminar producto" @onclick="() => OnRemoveCartItem(item.Id)">Eliminar</button>
-                </li>
+                foreach (var item in CartItems)
+                {
+                    <li class="cart-item">
+                        @item.Product.Name - @item.Product.SalePrice: €
+                         <div class="quantity-container">
+                            <button class="btn btn-outline-secondary" @onclick="() => OnUpdateCartItemQuantity(item, item.Count - 1)" disabled="@(item.Count <= 1)">-</button>
+                            <input type="number" value="@item.Count" min="1" readonly>
+                            <button class="btn btn-outline-secondary" @onclick="() => OnUpdateCartItemQuantity(item, item.Count + 1)">+</button>
+                            <button class="btn btn-danger" alt="Eliminar producto" @onclick="() => OnRemoveCartItem(item.Id)">Eliminar</button>
+                        </div> 
+                    </li>
+                }
+           
             }
-            <li class="cart-item">
-                <strong>Total: @CartItems.Sum(item => item.Count * item.Product.SalePrice):€</strong>
-                <button class="checkout-button" @onclick="OnProceedToCheckout">
-                    <img src="images/check-out-icon.png" alt="Checkout" class="checkout-icon" />Termina pedido
-                </button>
-            </li>
-        }
-     </ul>
+        </ul>
+     </div> 
+
+     <div class="cart-container">
+        <strong>Total: @CartItems.Sum(item => item.Count * item.Product.SalePrice):€</strong>
+        <button class="checkout-button" @onclick="OnProceedToCheckout">
+            <img src="images/check-out-icon.png" alt="Checkout" class="checkout-icon" />Termina pedido
+        </button>
+    </div> 
 </div>
     
 @code {
